<resources>
    <string name="abrir">Open</string>
    <string name="alterar_cadastro">"Change Registration"</string>
    <string name="alterar_forma_de_pagamento">Change Payment Method</string>
    <string name="aluno">Student</string>
    <string name="apagar">Delete</string>
    <string name="aplicativo_para_gestao_de_vendas_de_brigadeiros">"Application to manage sales of brigadeiros at UTTFPR"</string>
    <string name="app_name">Brigadeiros Sales Management</string>
    <string name="autor">Author</string>
    <string name="autor_beatriz_benz">Author: Beatriz Benz</string>
    <string name="cadastro_alterar">Change Registration</string>
    <string name="cancel">Cancel</string>
    <string name="classificacao">Classification</string>
    <string name="classificacao_do_cliente_nao_selecionada">Customer Rating not selected!</string>
    <string name="cliente_especial">Special Customer</string>
    <string name="comunidade_externa">External Community</string>
    <string name="confirmacao">Confirmation</string>
    <string name="control">Control Activities</string>
    <string name="credito">Credit card</string>
    <string name="data_ordem_venda">Generated sales order date</string>
    <string name="data_pagamento">Pay day</string>
    <string name="data_pagamento_vazia">Payment date cannot be empty</string>
    <plurals name="datas">
        <item quantity="one">%d year.</item>
        <item quantity="other">%d years.</item>
    </plurals>
    <string name="debito">Debit</string>
    <string name="description">Description: Application to manage sales of brigadeiros at UTTFPR</string>
    <string name="deseja_apagar">Do you want to Delete?</string>
    <string name="dinheiro">Cash</string>
    <string name="editar">Edit</string>
    <string name="email">Email: beatrizbenz@alunos.utfpr.edu.br</string>
    <string name="erro">Error</string>
    <string name="erro_nome">Name cannot be empty</string>
    <string name="erro_nome_vazio">Empty name</string>
    <string name="erro_nomes">Error Name</string>
    <string name="erro_tipo_nao_selecionado">Rating not selected</string>
    <string name="forma_de_pagamento">Payment Method</string>
    <string name="forma_de_pagamento_em_uso">Payment Method associated with a sale!</string>
    <string name="forma_de_pagamento_ja_cadastrada">Payment Method Already Registered</string>
    <string name="formas_de_pagamento">Payment Methods</string>
    <string name="funcionario">Employee</string>
    <string name="gestao_de_vendas_de_brigadeiro">Brigadier Sales Management</string>
    <string name="limpacampo">Clean Field</string>
    <string name="limpacampos">Clean Fields</string>
    <string name="metodo_de_pagamento_vazio">Empty payment method</string>
    <string name="nao">No</string>
    <string name="nenhuma_modalidade">No Modality Selected</string>
    <string name="nome">Name</string>
    <string name="nome_completo">Full name</string>
    <string name="nome_vazio">Name cannot be empty!</string>
    <string name="nova_forma_de_pagamento">New Payment Method</string>
    <string name="nova_ordem_venda">New Sales Order</string>
    <string name="novo_cadastro">"New register"</string>
    <string name="novos">New</string>
    <string name="ok">Ok</string>
    <string name="ordens_de_venda">Sales Orders</string>
    <string name="pagamento">Amount</string>
    <string name="pix">Zelle</string>
    <string name="salvar">Save</string>
    <string name="selecione">Select</string>
    <string name="selecione_a_classificacao_cliente">Select Customer Rating</string>
    <string name="selecione_forma_de_pagamento">Select payment method</string>
    <string name="selecione_o_metodo_de_pagamento">Select payment method</string>
    <string name="selecione_uma_opcao">Select an option</string>
    <string name="sim">Yes</string>
    <string name="sobre">About</string>
    <string name="tela_novo_cadastro">New Register</string>
    <string name="telefone">Telephone</string>
    <string name="telefone_vazio">Telephone cannot be empty!</string>
    <string name="valor_vazio">Price cannot be empty!</string>
    <string name="versao_1">"Version 1.0"</string>
</resources>